--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 theme: jekyll-theme-hacker
 
 # Site metadata
-title: Kannhha
-description: Welcome to my personal site
+title: Astra
+description: An Andromedian webpage
 url: https://kannhha.github.io
 
 # Theme customization
